tests/golden/type_errors/map_remove_invalid_key.err
Type error at 2:19: map key must be nil, number, bool, or string
  remove(values, [1]);
                    ^
